--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Post</h1>
 
-<%= render 'form', post: @post %>
+<%= render 'form', post_form: @post_form %>
 
-<%= link_to 'Show', @post %> |
+<%= link_to 'Show', @post_form %> |
 <%= link_to 'Back', posts_path %>
