--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Post</h1>
 
-<%= render 'form', post: @post %>
+<%= render 'form', post_form: @post_form %>
 
 <%= link_to 'Back', posts_path %>
